Academic Agents Studio 学术智能体平台开源v1.0版本正式上线🙂

--- a/themes/common.css
+++ b/themes/common.css
@@ -678,7 +678,7 @@
 
 /* input btns: clear, reset, stop */
 #input-panel button {
-    min-width: min(80px, 100%);
+    min-width: 85%;
 }
 
 /* input btns: clear, reset, stop */
